# nmealib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VERSION  library.json  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: Build.yml  BuildLinuxMatrix.yml  CI.yml  Coverage.yml  Docs.yml  PrepareRelease.yml  PublishGitHub.yml  PublishPlatformIO.yml  PublishPython.yml  PublishTestPyPI.yml  PullRequest.yml  Release.yml  StaticAnalysis.yml  Test.yml  WORKFLOW_TEMPLATE.md  static-analysis.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/app/: Makefile  cmake_install.cmake  nmealib-cli
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/src/nmea0183/: Makefile  cmake_install.cmake
app/: CMakeLists.txt  main.cpp
docs/: API-Reference.md  API.md  ARCHITECTURE.md  Building-and-Testing.md  CONTRIBUTING.md  Contributing.md  DOXYGEN.md  Doxyfile.in  EXAMPLES.md  Examples.md  FAQ.md  Getting-Started.md  Home.md  INSTALLATION.md  NMEA-0183-Guide.md  PROTOCOL_SUPPORT.md  README.md  USAGE.md
docs/nmea0183/: APB.md  DBT.md  DPT.md  GGA.md  GLL.md  GSA.md  GSV.md  HDG.md  HDM.md  MTW.md  MWV.md  README.md  RMA.md  RMB.md  RMC.md  VHW.md  VLW.md  VTG.md  VWR.md  XDR.md  XTE.md  ZDA.md
docs/nmea2000/: PGN127245.md  PGN127250.md  PGN127251.md  PGN127257.md  PGN128259.md  PGN129025.md  PGN129026.md  PGN130306.md  README.md
docs/wiki/: API-Reference.md  Building-and-Testing.md  Contributing.md  Examples.md  Getting-Started.md  Home.md  NMEA-0183-Guide.md  README.md
examples/platformio-esp32/: platformio.ini
examples/platformio-esp32/src/: main.cpp
include/: nmealib.h
include/nmealib/: message.h  message.hpp  nmea0183.h  nmea0183.hpp  nmea2000.h  nmea2000.hpp  nmeaException.hpp  nmealib.hpp
include/nmealib/detail/: errorSupport.h  parse.h
include/nmealib/nmea0183/: apb.h  dbt.h  dbt.hpp  dpt.h  gga.h  gga.hpp  gll.h  gll.hpp  gsa.h  gsa.hpp  gsv.h  hdg.h  hdm.h  messageRegistry.hpp  mtw.h  mwv.h  mwv.hpp  nmea0183.hpp  nmea0183Factory.h  nmea0183Factory.hpp  rma.h  rmb.h  rmc.h  rmc.hpp  vhw.h  vhw.hpp  vlw.h  vtg.h  vtg.hpp  vwr.h  xdr.h  xte.h  zda.h  zda.hpp
include/nmealib/nmea2000/: PGN127245.h  PGN127250.h  PGN127251.h  PGN127257.h  PGN128001.h  PGN128259.h  PGN129025.h  PGN129026.h  PGN130306.h  customTypes.h  dataTypes.h  messageRegistry.hpp  nmea2000Factory.h  nmea2000Factory.hpp  pgn129029.hpp
python/: CMakeLists.txt
python/nmealib/: __init__.py  __init__.pyi
python/nmealib/_core/: __init__.pyi  nmea0183.pyi  nmea2000.pyi
python/src/: bindings.cpp
scripts/: cppcheck_summary.py  generate_python_stubs.py  nmealibConfig.cmake  update_version.py
src/: CMakeLists.txt  message.cpp  message.hpp  nmea0183.cpp  nmea2000.cpp  nmeaException.cpp  nmeaException.hpp
src/nmea0183/: CMakeLists.txt  apb.cpp  dbt.cpp  dpt.cpp  gga.cpp  gll.cpp  gll.hpp  gsa.cpp  gsv.cpp  hdg.cpp  hdm.cpp  messageRegistry.cpp  messageRegistry.hpp  mtw.cpp  mwv.cpp  mwv.hpp  nmea0183.cpp  nmea0183.hpp  nmea0183Factory.cpp  nmea0183Factory.hpp  rma.cpp  rmb.cpp  rmc.cpp  rmc.hpp  vhw.cpp  vlw.cpp  vtg.cpp  vtg.hpp  vwr.cpp  xdr.cpp  xte.cpp  zda.cpp
src/nmea2000/: CMakeLists.txt  PGN127245.cpp  PGN127250.cpp  PGN127251.cpp  PGN127257.cpp  PGN128001.cpp  PGN128259.cpp  PGN129025.cpp  PGN129026.cpp  PGN130306.cpp  messageRegistry.cpp  messageRegistry.hpp  nmea2000Factory.cpp  pgn129029.cpp
tests/: CMakeLists.txt
tests/nmea0183/: CMakeLists.txt  test_APB.cpp  test_DBT.cpp  test_DPT.cpp  test_GGA.cpp  test_GLL.cpp  test_GSA.cpp  test_GSV.cpp  test_HDG.cpp  test_HDM.cpp  test_MTW.cpp  test_MWV.cpp  test_RMA.cpp  test_RMB.cpp  test_RMC.cpp  test_VHW.cpp  test_VLW.cpp  test_VTG.cpp  test_VWR.cpp  test_XDR.cpp  test_XTE.cpp  test_ZDA.cpp  test_nmea0183.cpp
tests/nmea2000/: CMakeLists.txt  test_PGN129029.cpp  test_dataTypes.cpp  test_nmea2000.cpp  test_pgn127245.cpp  test_pgn127250.cpp  test_pgn127251.cpp  test_pgn127257.cpp  test_pgn128001.cpp  test_pgn128259.cpp  test_pgn129025.cpp  test_pgn129026.cpp  test_pgn130306.cpp
tests/python/: test_bindings_all_supported.py  test_bindings_mvp.py
