[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "nmealib"
dynamic = ["version"]
description = "Python bindings for nmealib (NMEA 0183 and NMEA 2000 parsing)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Federico Liuzzi", email = "fliuzzi02@gmail.com" }]
maintainers = [{ name = "Federico Liuzzi", email = "fliuzzi02@gmail.com" }]
keywords = ["nmea", "nmea0183", "nmea2000", "marine", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://fliuzzi02.github.io/nmealib/"

[project.optional-dependencies]
dev = [
    "pybind11-stubgen>=2.5",
]

[tool.scikit-build]
cmake.version = ">=3.20"
wheel.packages = ["python/nmealib"]

[tool.scikit-build.sdist]
include = [
    "python/nmealib/**/*.pyi",
    "python/nmealib/py.typed",
    "scripts/generate_python_stubs.py",
]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_CLI = "OFF"
ENABLE_TESTS = "OFF"
ENABLE_STATIC_ANALYSIS = "OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = '^(?P<value>[0-9]+\.[0-9]+\.[0-9]+)$'

[tool.pytest.ini_options]
testpaths = ["tests/python"]
